[gd_scene format=3 uid="uid://b8k2m5qsavnx"]

[ext_resource type="Script" path="res://scripts/ui/unit_stats_tooltip.gd" id="1_tooltip"]

[node name="UnitStatsTooltip" type="Control"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -200.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
script = ExtResource("1_tooltip")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GlowEffect" type="ColorRect" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.15)

[node name="BorderOuter" type="ColorRect" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.5)

[node name="Background" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
color = Color(0.02, 0.04, 0.08, 0.95)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="UnitNameLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "UNIT TYPE"
horizontal_alignment = 1

[node name="HSeparator" type="ColorRect" parent="PanelContainer/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.3)

[node name="HPLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "HP: 100 / 100"

[node name="APLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.69, 0, 1)
theme_override_font_sizes/font_size = 14
text = "AP: 2 / 2"

[node name="HSeparator2" type="ColorRect" parent="PanelContainer/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.3)

[node name="MoveRangeLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 13
text = "MOVE: 5 tiles"

[node name="SightRangeLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 13
text = "SIGHT: 6 tiles"

[node name="ShootRangeLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.3, 1)
theme_override_font_sizes/font_size = 13
text = "SHOOT: 10 tiles"

[node name="DamageLabel" type="Label" parent="PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.3, 1)
theme_override_font_sizes/font_size = 13
text = "DAMAGE: 25"
